# spartan-zkinterface

./: .gitignore  Cargo.toml  rust-toolchain
src/: lib.rs  main.rs
