[package]
name = "spartan-zkinterface"
version = "0.1.0"
authors = ["Lef Ioannidis <elefthei@seas.upenn.edu>"]
edition = "2018"

[lib]
name = "spzk"
path = "src/lib.rs"

[[bin]]
name = "spzk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
spartan = { path = "/home/elefthei/git/spartan" }
curve25519-dalek = {version = "3.0.0", features = ["serde", "simd_backend"]}
rayon = "1.3.0"
rand = "0.7.3"
merlin = "2.0.0"
rand_core = { version = "0.5", default-features = false }
zeroize = { version = "1", default-features = false }
generic-array = "0.14.4"
flatbuffers = "0.7.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"

