[package]
name = "spartan-zkinterface"
version = "0.1.0"
authors = ["Lef Ioannidis <elefthei@seas.upenn.edu>"]
edition = "2018"

[lib]
name = "spzk"
path = "src/lib.rs"

[[bin]]
name = "spzk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
spartan = { path = "../Spartan" }
bincode = "1.2.1"
merlin = "3.0.0"
zeroize = { version = "1", default-features = false }
generic-array = "0.14.4"
flatbuffers = "0.7.0"

